[tool.poetry]
name = "hipcall-sdk"
version = "0.1.0"
description = "Official Hipcall API Wrapper written in Python"
authors = ["Ahmet Sezgin Duran <sezgin.duran@linux.org.tr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.9.2"
aiohttp = "^3.10.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"